--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>You can delete your account directly from the app:</p>
   <ul>
     <li>Open UVapp</li>
-    <li>Go to Settings → Delete Account</li>
+    <li>Go to 'Me' Page → Delete Account</li>
     <li>Confirm deletion</li>
   </ul>
 
