--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <li>No data is retained</li>
   </ul>
 
-  <p>If you cannot access the app, contact: support@yourdomain.com</p>
+  <!-- <p>If you cannot access the app, contact: support@yourdomain.com</p> -->
 </body>
 </html>
